--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
 
 <head>
   <title>DownloadIt- Download Videos on a Click</title>
@@ -18,7 +18,7 @@
   <div class="shape2">
     <img class="logo" src="assets/logo.png"/>
     <h1 class="heading">DownloadIt</h1>
-    <p class="caption">Download Videos on a Click</p>
+    <h1 class="caption">Download Videos on a Click</h1>
   </div>
   <div class="shape3">
 
