--- a/index.html
+++ b/index.html
@@ -21,8 +21,31 @@
     <h1 class="caption">Download Videos on a Click</h1>
   </div>
   <div class="shape3">
+    <br>
+    <h1 class="caption">Download Videos from</h1>
+    <div class="grid-container">
+      <div class="grid-item">
+        <img class="logo1" src="assets/insta.png"/>
+        <h1 class="appname">Instagram</h1>
+      </div>
+      <div class="grid-item">
+        <img class="logo1" src="assets/wa.png"/>
+        <h1 class="appname">WhatsApp</h1>
+      </div>
+      <div class="grid-item">
+        <img class="logo1" src="assets/fb.png"/>
+        <h1 class="appname">Facebook</h1>
+      </div>  
+      <div class="grid-item">
+        <img class="logo1" src="assets/tw.png"/>
+        <h1 class="appname">Twitter</h1>
+      </div>
+
+    </div>
 
   </div>
+  <button class="btn">DownloadIt</button>
+
 
 
  <!--https://drive.google.com/uc?id=1V2T0y_uF3fuC8LNPuUTTwVn_abYpdkdE&export=download--> 
