--- a/index.html
+++ b/index.html
@@ -45,7 +45,30 @@
 
   </div>
   <button class="btn">DownloadIt</button>
+  <div class="shape4">
+    <div class="grid-container1">
+      <div class="grid-item">
+        <img class="logo1" src="assets/info.png"/>
+        <h1 class="appname">About</h1>
+      </div>
+      <div class="grid-item">
+        <img class="logo1" src="assets/how.png"/>
+        <h1 class="appname">How to Use ?</h1>
+      </div>
+      <div class="grid-item">
+        <img class="logo1" src="assets/pri.png"/>
+        <h1 class="appname">Privacy</h1>
+      </div>  
 
+    </div>
+
+  </div>
+  <br><br>
+  <center><p><img width="20" height="15" src="assets/india.png"> Made in India</p><br>
+  <div class="footerclr">
+    Copyright &copy;<script>document.write(" "+new Date().getFullYear());</script> | All rights reserved
+  </div>
+  <br><br>
 
 
  <!--https://drive.google.com/uc?id=1V2T0y_uF3fuC8LNPuUTTwVn_abYpdkdE&export=download--> 
