--- a/index.html
+++ b/index.html
@@ -47,19 +47,18 @@
   <button class="btn">DownloadIt</button>
   <div class="shape4">
     <div class="grid-container1">
-      <div class="grid-item1">
-        <img class="logo2" src="assets/info.png"/>
+      <div class="grid-item1" onclick="window.location.href='about.html';" >
+        <img class="logo2"src="assets/info.png"/>
         <h1 class="appname">About</h1>
       </div>
-      <div class="grid-item1">
+      <div class="grid-item1" onclick="window.location.href='about.html';">
         <img class="logo2" src="assets/how.png"/>
         <h1 class="appname">How to Use ?</h1>
       </div>
-      <div class="grid-item1">
+      <div class="grid-item1"  onclick="window.location.href='privacy.html';" >
         <img class="logo2" src="assets/pri.png"/>
         <h1 class="appname">Privacy</h1>
       </div>  
-      
 
     </div>
 
