--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
 
   </div>
-  <button class="btn">DownloadIt</button>
+  <button class="btn" onclick="window.location.href='https://github.com/CTathva/DownloadIt/raw/main/assets/app-debug.apk';">DownloadIt</button>
   <h4>Latest Release: Version 1.3</h4>
   <div class="shape4">
     <div class="grid-container1">
@@ -72,7 +72,9 @@
   <br><br>
 
 
- <!--https://drive.google.com/uc?id=1V2T0y_uF3fuC8LNPuUTTwVn_abYpdkdE&export=download--> 
+ <!--https://drive.google.com/uc?id=14ZjMpW-5jABbuTveeP7_qkiKmjBtAVDu&export=download--> 
+
+
 </body>
 
 </html>
