--- a/privacy.html
+++ b/privacy.html
@@ -15,10 +15,12 @@
   <div class="shape1">
 
   </div>
-  <div class="shape2">
+  <div class="shape21">
     <img class="logo" src="assets/logo.png"/>
     <h1 class="heading">DownloadIt</h1>
     <h1 class="caption">Download Videos on a Click</h1>
+    <h1 class="caption">Version 1.3</h1>
+
   </div>
   <div class="shape5">
     <br>
@@ -36,7 +38,7 @@
     <p>The only situation we may get access to your personal identifiable information is when you personally decide to email us your feedback or to provide us with a bug log report. The personal identifiable information we may get from you in that situation
         are strictly limited to your name, email address, device information, location Information and your survey response only.</p>
     <br><br>
-    <h2>How we use your information</h2><br>
+    <h2>Your information</h2><br>
     <p>In above situation, we guarantee that your personal identifiable information will only be used for contacting you and improving our services. We will never use such information (e.g. your name and email address) for any other purposes, such as to
         further market our products, or to disclose your personal information to a third party for commercial gains.</p>
     <br><br>
