--- a/about.html
+++ b/about.html
@@ -15,13 +15,32 @@
   <div class="shape1">
 
   </div>
-  <div class="shape2">
+  <div class="shape21">
     <img class="logo" src="assets/logo.png"/>
     <h1 class="heading">DownloadIt</h1>
     <h1 class="caption">Download Videos on a Click</h1>
+    <h1 class="caption">Version 1.3</h1>
+
   </div>
-  <div class="shape3">
-  
+  <div class="shape5">
+    <br>
+    <h2>Features</h2>
+    <br>
+    <p>Download</p>
+    <ul>
+      <li>Instagram Stories</li>
+      <li>WhatsApp Status</li>
+      <li>Instagram Videos</li>
+      <li>Facebook Videos</li>
+      <li>Twitter Videos</li>
+      <li>Instagram DP</li>
+    </ul>
+    <br>
+    <p><b>Multi Launguage Support</b></p><br>
+    <p><b>Dark Mode</b></p><br>
+    <p><b>100% Secure</b></p><br>
+    <p><b>Android 11 Compatible</b></p><br>
+    <p><b>Ads Free</b></p> 
 
   </div>
   <br><br>
