--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <img class="logo2"src="assets/info.png"/>
         <h1 class="appname">About</h1>
       </div>
-      <div class="grid-item1" onclick="window.location.href='about.html';">
+      <div class="grid-item1" onclick="window.location.href='https://youtube.com/shorts/LHnN2O7pFVs?feature=share';">
         <img class="logo2" src="assets/how.png"/>
         <h1 class="appname">How to Use ?</h1>
       </div>
